--- a/css/style.css
+++ b/css/style.css
@@ -2,22 +2,32 @@
     background-color: #FEEAE9;
 }
 .watch-bg{
-    background-color: #FF9C35;
+    background-image: linear-gradient(152deg, #FF9C35 0%, #FFD019 100%);
 }
 .bag-bg{
-    background-color: #FF589B;
+    background-image: var(--linear, linear-gradient(180deg, #FF589B 0%, #FF136F 100%));
 }
 .shoes-bg{
-    background-color: #4289FF;
+    background-image: linear-gradient(170deg, #4289FF 0%, #3F07F8 100%);
 }
 .box img{
     width: 100px;
 }
 
 .btn{
-    background-color:#FF589B;
+    background-image: linear-gradient(to bottom, #FF589B 0%, #FF136F 100%);
+    color: #fff;
+    border: none;
+    border-radius: 8px;
+    padding: 9px 25px;
 }
 
 .bg-sub{
     background-color: #FFF2F1;
+}
+.price{
+    color: #FF136F;
+}
+.img-slider{
+    margin-top: 63px;
 }
